# automated-clean-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python-tests.yml
notebooks/example_user/: Untitled.ipynb
src/: histlib.py
src/automated_clean_code/: __init__.py  exercise_20_histlib.py  hist_lib.py  histlib.py  histogram_statistics.py
src/automated_clean_code/data/: exercise_20_data.txt
src/leetcode/: pytest.ini
tests/: __init__.py  conftest.py  exercise_20_histlib.py  test_add.py  test_find_max_and_min_count.py  test_find_max_min.py  test_hist_lib.py  test_histlib.py  test_histogram.py  test_hitlib.py  test_make_histogram.py  test_min_max_word.py  test_subtract.py
tests/fixtures/: hello.txt  sample_file  test.txt
