[tool.poetry]
name = "automated_clean_code"
version = "0.1.0"
description = ""
authors = ["MUIC"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"


[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.0"
flake8-annotations = "^3.0.1"
flake8-eradicate = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
